provisioning: Hook up GUID-based partition type
Signed-off-by: Ikey Doherty <ikey@aerynos.com>

--- a/crates/provisioning/Cargo.toml
+++ b/crates/provisioning/Cargo.toml
@@ -16,3 +16,4 @@ phf = { workspace = true, features = ["macros"] }
 test-log.workspace = true
 thiserror.workspace = true
 log.workspace = true
+uuid.workspace = true
