partitioning: Add new attributes for gpt tagging
Signed-off-by: Ikey Doherty <ikey@aerynos.com>

--- a/crates/partitioning/Cargo.toml
+++ b/crates/partitioning/Cargo.toml
@@ -10,6 +10,7 @@ thiserror.workspace = true
 log.workspace = true
 gpt.workspace = true
 nix.workspace = true
+uuid.workspace = true
 linux-raw-sys = { workspace = true, features = ["loop_device", "ioctl"] }
 
 [dev-dependencies]
