provisioning: Expose the roles/filesystems for mounts + formatting
Signed-off-by: Ikey Doherty <ikey@aerynos.com>

--- a/crates/partitioning/Cargo.toml
+++ b/crates/partitioning/Cargo.toml
@@ -6,6 +6,7 @@ description = "A library for working directly with partitions"
 
 [dependencies]
 disks = { path = "../disks" }
+types = { path = "../types" }
 thiserror.workspace = true
 log.workspace = true
 gpt.workspace = true
