types: Guard all KDL/miette stuff with kdl feature
This keeps the provisioning internals free from the other
crates for use in blsforme, etc.

Signed-off-by: Ikey Doherty <ikey@aerynos.com>

--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-kdl.workspace = true
+kdl = { workspace = true, optional = true }
 thiserror.workspace = true
-miette.workspace = true
+miette = { workspace = true, optional = true }
 gpt.workspace = true
 uuid.workspace = true
+
+[features]
+kdl = ["dep:kdl", "dep:miette"]
