--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ nix = { version = "0.30.1", features = ["fs", "mount"] }
 phf = "0.11"
 serde = { version = "1.0" }
 serde_json = "1.0"
+snafu = "0.8.5"
 test-log = "0.2.17"
 thiserror = "2.0.3"
 uuid = { version = "1.12.1", features = ["v8"] }
