--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,6 @@
 [workspace]
 resolver = "2"
-
-default-members = [
-    "crates/*",
-]
-
-members = [
-    "crates/*",
-]
+members = ["crates/*"]
 
 [workspace.dependencies]
 gpt = "4.0.0"
