--- a/crates/disks/Cargo.toml
+++ b/crates/disks/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "disks"
 version = "0.1.0"
-edition = "2021"
 description = "A library for working with disks and partitions"
+edition = "2021"
+rust-version.workspace = true
 
 [dependencies]
 regex = "1"
