--- a/crates/disktester/Cargo.toml
+++ b/crates/disktester/Cargo.toml
@@ -2,6 +2,7 @@
 name = "disktester"
 version = "0.1.0"
 edition = "2021"
+rust-version.workspace = true
 
 [dependencies]
 disks = { path = "../disks" }
