--- a/crates/provisioning/Cargo.toml
+++ b/crates/provisioning/Cargo.toml
@@ -2,6 +2,7 @@
 name = "provisioning"
 version = "0.1.0"
 edition = "2021"
+rust-version.workspace = true
 
 [dev-dependencies]
 miette = { workspace = true, features = ["fancy"] }
